Se agrego funcionalidad y estructura basica de algunas vistas sin CSS

--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -2,17 +2,17 @@
 <header>
     <nav class="navbar">
         <a href="/">
-            <img class="navbar__logo" src="/images/logo.png" alt="logo DeportShopia">
+            <img class="navbar__logo" src="/images/logos/main-logo.png" alt="logo DeportShopia">
         </a>
         <a class="navbar__link navbar__link--active" href="#">Nuevo!</a>
         <a class="navbar__link" href="#">Hombre</a>
         <a class="navbar__link" href="#">Mujer</a>
         <a class="navbar__link" href="#">Infantil</a>
-        <a class="navbar__link" href="/register">Registrate</a>
+        <a class="navbar__link" href="/users/register">Registrate</a>
         <form  class="navbar__form" action="" method="post">
             <input class="navbar__form__text" type="text" name="" id="">
             <button class="navbar__form__btn"><a href="/cart">C</a></button>
-            <button class="navbar__form__btn"><a href="/login">L</a></button>
+            <button class="navbar__form__btn"><a href="/users/login">L</a></button>
         </form>
     </nav>
 </header>
