--- a/site/src/views/products/detail.ejs
+++ b/site/src/views/products/detail.ejs
@@ -5,6 +5,31 @@
     <%- include('../partials/header') %>
 
     <main>
+        <h1>Detalle del producto <%= product.name %> </h1>
+        <div>
+            <img src="/images/products/<%= producto.image %>" alt="product image">
+        </div>
+        <div>
+            <p><%= producto.description %></p>
+        </div>
+        <div>
+            <h2><%= producto.name %></h2>
+        </div>
+        <div>
+            <p>$<%= f(producto.price) %></p>
+        </div>
+        <div>
+            <p><%= producto.discount %> % OFF</p>
+        </div>
+        <div>
+            <a href="#">COMPRAR AHORA</a>
+        </div>
+        <div>
+            <a href="/products/<%= producto.id %>/edit">Editar</a>
+        </div>
+        <form action="/products/<%= producto.id %>?_method=DELETE" method="POST">
+            <button type="submit">ELIMINAR</button>
+        </form>
     </main>
 
     <%- include('../partials/footer') %>
