--- a/site/src/views/users/edit.ejs
+++ b/site/src/views/users/edit.ejs
@@ -6,25 +6,25 @@
     <%- include('../partials/header') %>
 
     <main>
-        <h1>Registrate</h1>
-        <form action="/users" method="POST" enctype="multipart/form-data">
+        <h1>Edita tu informacion personal <%= user.username %> </h1>
+        <form action="/users/<%= user.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
             <div>
                 <label for="userAvatar">Imagen de usuario:</label>
-                <input type="file" name="userAvatar" id="userAvatar" accept=".jpg, .png, .jpeg, .bmp, .tiff, .tif|image/*">
+                <input type="file" name="userAvatar" id="userAvatar" accept=".jpg, .png, .jpeg, .bmp, .tiff, .tif|image/*" value="<%= user.image %>">
             </div>
             <div>
                 <label for="name">Nombre:</label>
-                <input type="text" name="name" id="name" placeholder="Jose de Jesus" required>
+                <input type="text" name="name" id="name" value="<%= user.name %>">
                 <span class="feedback"></span>
             </div>
             <div>
                 <label for="surname">Apellido:</label>
-                <input type="text" name="surname" id="surname" placeholder="Aguirre Arzate" required>
+                <input type="text" name="surname" id="surname" value="<%= user.surname %>">
                 <span class="feedback"></span>
             </div>
             <div>
                 <label for="username">Nombre de usuario:</label>
-                <input type="text" name="username" id="username" placeholder="susej">
+                <input type="text" name="username" id="username" value="<%= user.username %>">
                 <span class="feedback"></span>
             </div>
             <div>
@@ -38,30 +38,15 @@
             </div>
             <div>
                 <label for="birthday">Fecha de nacimiento:</label>
-                <input type="date" name="birthday" id="birthday">
+                <input type="date" name="birthday" id="birthday" value="<%= user.birthday %>">
             </div>
             <div>
                 <label for="email">Correo:</label>
-                <input type="email" name="email" id="email" placeholder="user@email.com" required>
+                <input type="email" name="email" id="email" value="<%= user.email %>">
                 <span class="feedback"></span>
             </div>
             <div>
-                <label for="password">Contraseña:</label>
-                <input type="password" name="password" id="password" required>
-            </div>
-            <div>
-                <label for="rpass">Confirmar contraseña:</label>
-                <input type="password" name="rpass" id="rpass" required>
-            </div>
-            <div>
-                <input type="checkbox" name="terms" id="terms">
-                <label for="terms">Acepto terminos y condiciones</label>
-            </div>
-            <div>
                 <button type="submit">Enviar</button>
-            </div>
-            <div>
-                <button type="reset">Borrar Formulario</button>
             </div>
         </form>
     </main>
