--- a/site/src/views/users/register.ejs
+++ b/site/src/views/users/register.ejs
@@ -14,26 +14,25 @@
             </div>
             <div>
                 <label for="name">Nombre:</label>
-                <input type="text" name="name" id="name" placeholder="Jose de Jesus" required>
+                <input type="text" name="name" id="name" placeholder="Eg. Jesus" required>
                 <span class="feedback"></span>
             </div>
             <div>
                 <label for="surname">Apellido:</label>
-                <input type="text" name="surname" id="surname" placeholder="Aguirre Arzate" required>
+                <input type="text" name="surname" id="surname" placeholder="Eg. Aguirre" required>
                 <span class="feedback"></span>
             </div>
             <div>
                 <label for="username">Nombre de usuario:</label>
-                <input type="text" name="username" id="username" placeholder="susej">
+                <input type="text" name="username" id="username" placeholder="Eg. Susej">
                 <span class="feedback"></span>
             </div>
             <div>
                 <label for="category">Elige tipo de usuario:</label>
                 <select name="category" id="category" class="form-input">
                     <option value="" disabled>--Selecciona--</option>
-                    <option value="vendor">Vendedor</option>
-                    <option value="customer">Comprador</option>
-                    <option value="both">Ambos</option>
+                    <option value="user">Usuario</option>
+                    <option value="admin">Administrador</option>
                 </select>
             </div>
             <div>
