--- a/site/src/views/products/edit.ejs
+++ b/site/src/views/products/edit.ejs
@@ -20,17 +20,28 @@
                 <input type="number" id="discount" name="discount" placeholder="Ej: 15" value="<%= product.discount %>">
             </div>
             <div>
-                <label for="category">Categoría:</label>
-                <select name="category" id="category">
-                    <option value="" disabled>Elegí</option>
-                    <% if (product.category == 'in-sale') { %>
-                        <option value="in-sale" selected>En oferta</option>
-                        <option value="visited">Últimos agregados</option>
-                    <% }else{ %>
-                        <option value="in-sale">En oferta</option>
-                        <option value="visited" selected>Últimos agregados</option>
-                    <% } %> 
-                </select>
+                <h3>Categoria del producto:</h3>
+                <% let array  = ['Music', 'Kids', 'Computers', 'Home','Grosery','Health','Movies','Electronics','Shoes','Books','Toys','Industrial','Games','Jewelry','Beauty','Baby','Garden','Sports','Outdoors']; %> 
+                <% for (let i of array) { %>
+                    <% if (product.thematic == i) { %>
+                        <p>
+                            <input type="radio" name="thematic" value="<%= i %>" id="<%= i %>" selected>
+                            <label for="<%= i %>"><%= i %></label>
+                        </p>
+                    <% } %>
+                    <p>
+                        <input type="radio" name="thematic" value="<%= i %>" id="<%= i %>">
+                        <label for="<%= i %>"><%= i %></label>
+                    </p>   
+                <% } %> 
+            </div>
+            <div>
+                <label for="keywords">Palabras clave:</label>
+                <% let x = ''; %>
+                <% for (let i in product.keywords) { %>
+                    <% x += i  + ', '; %> 
+                <% } %>   
+                <input type="text" id="keywords" name="keywords" value="<%= x %>">
             </div>
             <div>
                 <label for="description">Descipción:</label>
