--- a/site/src/views/main/results.ejs
+++ b/site/src/views/main/results.ejs
@@ -5,6 +5,22 @@
     <%- include('../partials/header') %>
 
     <main>
+        <div class="container">
+            <div class="prodsReel">
+                <h3 class="prodsReel__title">Resultados de la busqueda <%= keywords %> </h3>
+                <% for (let i of products ) { %> 
+                <div class="product">
+                    <a href="/products/<%= i.id %>">
+                        <img src="/images/products/<%= i.image %>" alt="Imagen Playera" class="product__im">
+                        <div class="product__info">
+                            <p class="product__name"><%= i.name %></p>
+                            <p class="product__price">$<%= f(i.price) %></p>
+                        </div>
+                    </a>
+                </div> <!--.product-->
+                <% } %> 
+            </div>
+        </div>
     </main>
 
     <%- include('../partials/footer') %>
