--- a/site/src/views/products/index.ejs
+++ b/site/src/views/products/index.ejs
@@ -5,18 +5,20 @@
     <%- include('../partials/header'); %>
 
     <main>
-        <h1>Listado de todos los productos</h1>
-        <% for (let product of products) { %> 
-        <div class="product">
-            <a href="/products/<%= product.id %>">
-                <img src="/images/products/<%= product.image %> " alt="imagen de <%= product.name %>" class="product__im">
-                <div class="product__info">
-                    <p class="product__name"><%= product.name %></p>
-                    <p class="product__price">$<%= f(product.price) %></p>
-                </div>
-            </a>
-        </div> <!--.product-->
-        <% } %> 
+        <div>
+            <h1>Listado de todos los productos</h1>
+            <% for (let product of products) { %> 
+            <div class="product">
+                <a href="/products/<%= product.id %>">
+                    <img src="/images/products/<%= product.image %> " alt="imagen de <%= product.name %>" class="product__im">
+                    <div class="product__info">
+                        <p class="product__name"><%= product.name %></p>
+                        <p class="product__price">$<%= f(product.price) %></p>
+                    </div>
+                </a>
+            </div> <!--.product-->
+            <% } %> 
+        </div>
     </main>
 
     <%- include('../partials/footer'); %>
