--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -9,10 +9,10 @@
         <a class="navbar__link" href="#">Mujer</a>
         <a class="navbar__link" href="#">Infantil</a>
         <a class="navbar__link" href="/users/register">Registrate</a>
-        <form  class="navbar__form" action="" method="post">
+        <form  class="navbar__form" action="" method="GET">
             <input class="navbar__form__text" type="text" name="" id="">
             <button class="navbar__form__btn"><a href="/cart">C</a></button>
-            <button class="navbar__form__btn"><a href="/users/login">L</a></button>
+            <button class="navbar__form__btn"><a href="/login">L</a></button>
         </form>
     </nav>
 </header>
