--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Web Page for Deportshopi final project">
     <title>DeportShopia</title>
     <link rel="preload" href="/css/normalize.css" as="style">
     <link rel="stylesheet" href="/css/normalize.css">
