--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -4,10 +4,10 @@
         <a href="/">
             <img class="navbar__logo" src="/images/logos/main-logo.png" alt="logo DeportShopia">
         </a>
-        <a class="navbar__link navbar__link--active" href="#">Nuevo!</a>
-        <a class="navbar__link" href="#">Hombre</a>
-        <a class="navbar__link" href="#">Mujer</a>
-        <a class="navbar__link" href="#">Infantil</a>
+        <a class="navbar__link navbar__link--active" href="#">Ofertas!</a>
+        <a class="navbar__link" href="/products">Productos</a>
+        <a class="navbar__link" href="/products/create">Vender</a>
+        <a class="navbar__link" href="#">Outlet</a>
         <a class="navbar__link" href="/users/register">Registrate</a>
         <form  class="navbar__form" action="" method="GET">
             <input class="navbar__form__text" type="text" name="" id="">
