--- a/site/src/views/cart.ejs
+++ b/site/src/views/cart.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <%- include('../partials/head') %>
+    <%- include('./partials/head') %>
 
 <body>
-    <%- include('../partials/header') %>
+    <%- include('./partials/header') %>
 
     <main></main>
     
-    <%- include('../partials/footer') %>
+    <%- include('./partials/footer') %>
 </body>
 </html>
