--- a/site/src/views/products/edit.ejs
+++ b/site/src/views/products/edit.ejs
@@ -22,24 +22,25 @@
                 </div>
                 <div>
                     <h3>Categoria del producto:</h3>
-                    <% let array  = ['Music', 'Kids', 'Computers', 'Home','Grosery','Health','Movies','Electronics','Shoes','Books','Toys','Industrial','Games','Jewelry','Beauty','Baby','Garden','Sports','Outdoors']; %> 
+                    <% let array  = ["Music", "Kids", "Computers", "Home","Grosery","Health","Movies","Electronics","Shoes","Books","Toys","Industrial","Games","Jewelry","Beauty","Baby","Garden","Sports","Outdoors"]; %> 
                     <% for (let i of array) { %>
-                        <% if (product.thematic == i) { %>
+                        <% if (i === product.thematic ) { %>
                             <p>
                                 <input type="radio" name="thematic" value="<%= i %>" id="<%= i %>" selected>
                                 <label for="<%= i %>"><%= i %></label>
                             </p>
-                        <% } %>
-                        <p>
-                            <input type="radio" name="thematic" value="<%= i %>" id="<%= i %>">
-                            <label for="<%= i %>"><%= i %></label>
-                        </p>   
+                        <% }else{ %>
+                            <p>
+                                <input type="radio" name="thematic" value="<%= i %>" id="<%= i %>">
+                                <label for="<%= i %>"><%= i %></label>
+                            </p>   
+                        <% } %> 
                     <% } %> 
                 </div>
                 <div>
                     <label for="keywords">Palabras clave:</label>
                     <% let x = ''; %>
-                    <% for (let i in product.keywords) { %>
+                    <% for (let i of product.keywords) { %>
                         <% x += i  + ', '; %> 
                     <% } %>   
                     <input type="text" id="keywords" name="keywords" value="<%= x %>">
