--- a/site/src/scss/layout/main/_index.scss
+++ b/site/src/scss/layout/main/_index.scss
@@ -8,7 +8,7 @@
 // First Section
 
 .bg{
-    background-image: url(../images/trek.png);
+    background-image: url(../images/min/stills/background-mountain.png);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
