--- a/site/src/views/main/index.ejs
+++ b/site/src/views/main/index.ejs
@@ -119,7 +119,7 @@
                     <% for (let i = 0; i<4; i++ ) { %> 
                     <div class="product">
                         <a href="/products/<%= products[i].id %>">
-                            <img src="/images/products/<%= products[i].image %>" alt="Imagen Playera" class="product__im">
+                            <img src="/images/min/products/<%= products[i].image %>" alt="Imagen Playera" class="product__im">
                             <div class="product__info">
                                 <p class="product__name"><%= products[i].name %></p>
                                 <p class="product__price">$<%= f(products[i].price) %></p>
