--- a/site/src/views/products/detail.ejs
+++ b/site/src/views/products/detail.ejs
@@ -8,7 +8,7 @@
         <div>
             <h1>Detalle del producto <%= product.name %> </h1>
             <div>
-                <img src="/images/products/<%= product.image %>" alt="product image">
+                <img src="/images/min/products/<%= product.image %>" alt="product image">
             </div>
             <div>
                 <p><%= product.description %></p>
