--- a/site/src/views/users/detail.ejs
+++ b/site/src/views/users/detail.ejs
@@ -8,7 +8,7 @@
     <div>
         <h1>Pagina principal del usuario <%= user.username %> </h1>
         <div>
-            <img src="/images/users/<%= user.image %>" alt="avatar">
+            <img src="/images/min/users/<%= user.image %>" alt="avatar">
         </div>
         <div>
             <p>Nombre: <span><%= user.name %> </span></p>
