--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -1,347 +1,2 @@
-:root{
-    /* Main Colors */
-    --prin:#a15b3d;
-    --secon:#b11b23;
-    --white:#fff;
-    --black:#000;
-    --gray: rgb(209, 209, 209);
-
-    --aux: rgb(17, 226, 17);
-
-    /* Main Fonts */
-    --prin-fnt:'Staatliches', cursive;
-}
-
-/* Global Config */
-html{
-    box-sizing: border-box;
-    font-size: 62.5%;
-}
-*, *:before,*:after{
-    box-sizing: inherit;
-}
-body{
-    font-size: 16px;
-    line-height: 1.5;
-}
-p{
-    font-size: 1.8rem;
-    font-family: Arial, Helvetica, sans-serif;
-}
-a{
-    text-decoration: none;
-}
-img{
-    width: 100%;
-}
-h1,h2,h3{
-    text-align: center;
-    font-family: var(--prin-fnt);
-}
-h1{font-size: 4rem;}
-h2{font-size: 3.2rem;}
-h3{font-size: 2.4rem;}
-button, 
-input[type="button"]{
-    cursor: pointer;
-}
-ul {
-    padding: 0;
-}
-ul li {
-    list-style-type: none;
-}
-
-/* Single use classes */
-.margin-zero{
-    margin: 0;
-}
-
-/* --------------------------- */
-/* Homepage index.ejs */
-/* --------------------------- */
-
-/* Header */
-header{
-    display: flex;
-    justify-content: center;
-    padding: 2rem 0;
-}
-.navbar{
-    background-color: var(--prin);
-    padding: 1rem 0;
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    width: 100%;
-}
-.navbar__logo{
-    max-width: 10rem;
-    margin-top: .7rem;
-}
-.navbar__link{
-    font-family: var(--prin-fnt);
-    color: var(--white);
-    font-size: 3rem;
-}
-.navbar__link:hover,
-.navbar__link--active{
-    color: var(--secon);
-}
-.navbar__form{
-    display: flex;
-    justify-content: center;
-    padding: 1rem 0;
-    gap: 2rem;
-}
-.navbar__form__text,
-.navbar__form__btn,
-.newsblock__content__btn,
-.linksblock__social__btn{
-    border: none;
-    border-radius: .5rem;
-    background-color: var(--white);
-}
-.navbar__form__btn{
-    width: 2.8rem;
-    border-radius: 50%;
-}
-
-/* Footer */
-.newsblock{
-    background-color: var(--gray);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem 16rem;
-    text-align: center;
-    margin-top: 2rem;
-}
-.newsblock__content{
-    width: 100%;
-    height: 20rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.newsblock__content__btn{
-    width: 15rem;
-    height: 5rem;
-    color: var(--prin);
-    border: .1rem solid var(--prin);
-}
-
-.linksblock{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(1,1fr);
-    gap: 2rem;
-}
-.linksblock__links{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 1rem;
-    padding-left: 16rem;
-    align-self: center;
-    justify-items: center;
-}
-.linksblock__icons{
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-    grid-template-rows: 7rem 16rem;
-    gap: 2rem;
-    align-items: center;
-    padding: 2rem 16rem 3rem 0;
-}
-.linksblock__icons__social{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-.linksblock__icons__social__btn{
-    background-color: var(--gray);
-    width: 4rem;
-    height: 4rem;
-    border-radius: 50%;
-    margin: 0 1rem 0 1rem;
-}
-.linksblock__icons__cert{
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-    grid-template-rows: repeat(2,1fr);
-    gap: 2rem;
-    align-items: center;
-    justify-items: center;
-}
-.linksblock__icons__cert__logo{
-    background-color: var(--gray);
-    width: 10rem;
-    height: 5rem;
-}
-.item7{
-    grid-column: 1/3;
-}
-.item8{
-    grid-column: 3/5;
-}
-.item9{
-    grid-column: 5/7;
-}
-.footnoteblock{
-    border-top: .1rem solid var(--black);
-    padding: 0 16rem 0 16rem;
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-}
-
-/* Main */
-.container{
-    max-width: 120rem;
-    height: auto;
-    margin: 0 auto;
-}
-
-
-/* First Section */
-
-.bg{
-    background-image: url(../images/trek.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    width: 100%;
-    height: 45rem;
-}
-.carousel{
-    background-color: rgb(0 0 0 / 65%);
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.carousel__images{} 
-.carousel__indicators{}
-.leftarrow{}
-.rightarrow{}
-
-/* Second section */
-.fastnews{
-    margin: 1rem 0;
-    background-color: var(--prin);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.fastnews p{
-    font: var(--prin-fnt);
-}
-
-
-/* Third section */
-.discounts{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.discount{
-    width: 22rem;
-    height: auto;
-    background-color: rgba(230, 99, 99, 0.322);
-    border: .1rem solid red;
-    border-radius: .5rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.discount__logo{}
-.discount__text{}
-
-/* Fourth section */
-.banners{
-    margin: 1rem 0;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: 1fr;
-    gap: .5rem;
-}
-.banner{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: 1fr;
-    border: .1rem solid blue;
-    border-radius: .5rem;
-}
-.banner__icon{
-    grid-row: 1/3;
-    text-align: center;
-    margin: auto 0;
-}
-.banner__title{}
-.banner__texto{
-    grid-column: 2/3;
-}
-
-/* Fifth section */
-.catCards{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 1rem 0;
-}
-.catCard{
-    border: .1rem solid var(--black);
-    display: grid;
-    grid-template-columns: repeat(2,12rem);
-    grid-template-rows: repeat(6,6rem);
-    gap: .5rem;
-}
-.catCard__image{
-    grid-column: 1/3;
-    grid-row: 1/4;
-}
-.catCard__title{
-    grid-column: 1/3;
-    grid-row: 4/5;
-}
-.catCard__sections{
-    grid-column: 1/2;
-    grid-row: 5/7;
-}
-.catCard__sections__link{}
-.catCard__expand{
-    grid-column: 2/3;
-    grid-row: 5/6;
-}
-
-/* Sixth section */
-.prodsReel{}
-.prodsReel__title{}
-.prodsReel__carousel{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap: 5rem;
-}
-.product{
-    background-color: var(--prin);
-    padding: 1rem;
-}
-.product__im{}
-.product__info{}
-.product__name{
-    font-size: 4rem;
-}
-.product__price{
-    font-size: 2.8rem;
-    color: var(--secon);
-}
-.product__name,.product__price{
-    font-family: var(--prin-fnt);
-    margin: 1rem 0;
-    text-align: center;
-    line-height: 1.2;
-}
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");html{-webkit-text-size-adjust:100%;line-height:1.15}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}[hidden],template{display:none}html{box-sizing:border-box;font-size:62.5%}*,:after,:before{box-sizing:inherit}body{font-family:Staatliches,cursive;font-size:16px;line-height:1.5}p{font-family:Arial,Helvetica,sans-serif;font-size:2rem}a{cursor:pointer;text-decoration:none}img{width:100%}h1,h2,h3{font-family:Staatliches,cursive;text-align:center}h1{font-size:4rem}h2{font-size:3.6rem}h3{font-size:3rem}button,input[type=button]{cursor:pointer}ul{padding:0}ul li{list-style-type:none}.margin-zero{margin:0}header{padding:2rem 0}.navbar,header{display:flex;justify-content:center}.navbar{background-color:#a15b3d;gap:2rem;padding:1rem 0;width:100%}.navbar__logo{margin-top:.7rem;max-width:10rem}.navbar__link{color:#fff;font-family:Staatliches,cursive;font-size:3rem}.navbar__link--active,.navbar__link:hover{color:#b11b23}.navbar__form{display:flex;gap:2rem;justify-content:center;padding:1rem 0}.linksblock__social__btn,.navbar__form__btn,.navbar__form__text,.newsblock__content__btn{background-color:#fff;border:none;border-radius:.5rem}.navbar__form__btn{border-radius:50%;width:2.8rem}.newsblock{background-color:#d1d1d1;justify-content:center;margin-top:2rem;padding:2rem 16rem;text-align:center}.newsblock,.newsblock__content{align-items:center;display:flex}.newsblock__content{flex-direction:column;height:20rem;justify-content:space-evenly;width:100%}.newsblock__content__btn{border:.1rem solid #a15b3d;color:#a15b3d;height:5rem;width:15rem}.linksblock{display:grid;gap:2rem;grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(1,1fr)}.linksblock__links{align-self:center;display:grid;gap:1rem;grid-template-columns:repeat(3,1fr);justify-items:center;padding-left:16rem}.linksblock__icons{align-items:center;display:grid;gap:2rem;grid-template-columns:repeat(1,1fr);grid-template-rows:7rem 16rem;padding:2rem 16rem 3rem 0}.linksblock__icons__social{align-items:center;display:flex;justify-content:flex-end}.linksblock__icons__social__btn{background-color:#d1d1d1;border-radius:50%;height:4rem;margin:0 1rem;width:4rem}.linksblock__icons__cert{align-items:center;display:grid;gap:2rem;grid-template-columns:repeat(6,1fr);grid-template-rows:repeat(2,1fr);justify-items:center}.linksblock__icons__cert__logo{background-color:#d1d1d1;height:5rem;width:10rem}.item7{grid-column:1/3}.item8{grid-column:3/5}.item9{grid-column:5/7}.footnoteblock{border-top:900 solid;display:flex;justify-content:space-between;padding:0 16rem;text-align:center}.container{height:auto;margin:0 auto;max-width:120rem}.bg{background-image:url(../images/min/stills/background-mountain.png);background-repeat:no-repeat;background-size:cover;height:45rem;position:relative;width:100%}.carousel{background-color:rgba(0,0,0,.65);flex-direction:column;height:100%;position:absolute;width:100%}.carousel,.fastnews{align-items:center;display:flex;justify-content:center}.fastnews{background-color:#a15b3d;margin:1rem 0}.fastnews p{font:Staatliches,cursive}.discount,.discounts{align-items:center;display:flex;justify-content:space-around}.discount{background-color:rgba(230,99,99,.322);border:.1rem solid red;border-radius:.5rem;height:auto;width:22rem}.banners{gap:.5rem;grid-template-columns:repeat(3,1fr);margin:1rem 0}.banner,.banners{display:grid;grid-template-rows:1fr}.banner{border:.1rem solid blue;border-radius:.5rem;grid-template-columns:repeat(2,1fr)}.banner__icon{grid-row:1/3;margin:auto 0;text-align:center}.banner__texto{grid-column:2/3}.catCards{align-items:center;display:flex;justify-content:space-between;margin:1rem 0}.catCard{border:900 solid;display:grid;gap:.5rem;grid-template-columns:repeat(2,12rem);grid-template-rows:repeat(6,6rem)}.catCard__image{grid-column:1/3;grid-row:1/4}.catCard__title{grid-column:1/3;grid-row:4/5}.catCard__sections{grid-column:1/2;grid-row:5/7}.catCard__expand{grid-column:2/3;grid-row:5/6}.prodsReel__carousel{display:grid;gap:5rem;grid-template-columns:repeat(4,1fr)}.product{background-color:#a15b3d;padding:1rem}.product__name{font-size:4rem}.product__price{color:#b11b23;font-size:2.8rem}.product__name,.product__price{font-family:Staatliches,cursive;line-height:1.2;margin:1rem 0;text-align:center}
+/*# sourceMappingURL=styles.css.map */
