--- a/site/src/views/cart.ejs
+++ b/site/src/views/cart.ejs
@@ -5,7 +5,17 @@
 <body>
     <%- include('./partials/header') %>
 
-    <main></main>
+    <main class="loginForm">
+        <div>
+            <h2>Mi carrito</h2>
+            
+            <br>
+        
+            <label>Tu carrito está vacío</label>
+        </div>
+
+
+    </main>
     
     <%- include('./partials/footer') %>
 </body>
