--- a/site/src/views/products/kids.ejs
+++ b/site/src/views/products/kids.ejs
@@ -5,6 +5,7 @@
     <%- include('../partials/header'); %>
 
     <main class="product">
+        <h2>Kids</h2>
         <% for (let product of products) { %>             
         <div class="product__info">
             <a href="/products/<%= product.id %>">
