--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -10,12 +10,14 @@
         <a class="navbar__link navbar__link--active" href="#">Ofertas!</a>
         <a class="navbar__link" href="/products">Productos</a>
         <a class="navbar__link" href="/products/create">Vender</a>
-        <a class="navbar__link" href="#">Outlet</a>
-        <a class="navbar__link" href="/users/register">Registrate</a>
-        <form  class="navbar__form" action="" method="GET">
-            <input class="navbar__form__text" type="text" name="" id="">
-            <button class="navbar__form__btn"><a href="/cart">C</a></button>
-            <button class="navbar__form__btn"><a href="/login">L</a></button>
-        </form>
+        <a class="navbar__link" href="/products/men">Hombre</a>
+        <a class="navbar__link" href="/products/women">Mujer</a>
+        <a class="navbar__link" href="/products/kids">Niñ@s</a>
+    
+        <div class="linksblock__icons__social">
+                <button class="linksblock__icons__social__btn"><a href="https://m.facebook.com/?locale2=es_LA" target="_blank"><img src="/images/buscar.png" alt="logoFacebook"></a></button>
+                <button class="linksblock__icons__social__btn"><a href="/login"><img src="/images/user.png" alt="logoTwitter"></a></button>
+                <button class="linksblock__icons__social__btn"><a href="/cart"><img src="/images/carrito.png" alt="logoInstagram"></a></button>
+        </div>
     </nav>
 </header>
