--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -4,17 +4,19 @@
 
 <body>
     <%- include('../partials/header') %>
-    <main>
+    <main class="loginForm">
         <div>
             <h1>Inicia Sesion</h1>
             <form action="/users" method="POST">
                 <div>
-                    <label for="email">Correo electronico:</label>
-                    <input type="email" name="email" id="email" placeholder="Eg. user@mail.com" required>
+                    <label for="email">Correo electrónico:</label>
+                    <br>
+                    <input type="email" name="email" id="email" required>
                     <span class="feedback"></span>
                 </div>
                 <div>
                     <label for="password">Contraseña:</label>
+                    <br>
                     <input type="password" name="password" id="password" required>
                 </div>
                 <div>
@@ -27,10 +29,12 @@
                 </div> -->
             </form>
             <div>
-                <a href="#">Olvide mi Contraseña</a>
-            </div>
-            <div>
-                <a href="/users/register">Registrate ahora</a>
+                <p>
+                    <a href="#">Olvide mi Contraseña</a>
+                    <br><br>
+                    <b>¿Nuevo cliente?</b>
+                    <a href="/users/register">Registrate ahora</a>
+                </p>
             </div>
         </div>
     </main>
