--- a/site/src/views/users/register.ejs
+++ b/site/src/views/users/register.ejs
@@ -5,14 +5,25 @@
 <body>
     <%- include('../partials/header') %>
 
-    <main>
+    <main class="registerForm">
         <div>
             <h1>Registrate</h1>
             <form action="/users" method="POST" enctype="multipart/form-data">
                 <div>
+                    <label for="category">Elige tipo de usuario:</label>
+                    <select name="category" id="category" class="form-input">
+                        <option value="" disabled>--Selecciona--</option>
+                        <option value="user">Usuario</option>
+                        <option value="admin">Administrador</option>
+                    </select>
+                </div>
+                <div>
                     <label for="userAvatar">Imagen de usuario:</label>
                     <input type="file" name="userAvatar" id="userAvatar" accept=".jpg, .png, .jpeg, .bmp, .tiff, .tif|image/*">
                 </div>
+
+                <br>
+
                 <div>
                     <label for="name">Nombre:</label>
                     <input type="text" name="name" id="name" placeholder="Eg. Jesus" required>
@@ -28,18 +39,13 @@
                     <input type="text" name="username" id="username" placeholder="Eg. Susej">
                     <span class="feedback"></span>
                 </div>
-                <div>
-                    <label for="category">Elige tipo de usuario:</label>
-                    <select name="category" id="category" class="form-input">
-                        <option value="" disabled>--Selecciona--</option>
-                        <option value="user">Usuario</option>
-                        <option value="admin">Administrador</option>
-                    </select>
-                </div>
+                
                 <div>
                     <label for="birthday">Fecha de nacimiento:</label>
                     <input type="date" name="birthday" id="birthday">
                 </div>
+                
+                <br>
                 <div>
                     <label for="email">Correo:</label>
                     <input type="email" name="email" id="email" placeholder="user@email.com" required>
@@ -53,15 +59,16 @@
                     <label for="rpass">Confirmar contraseña:</label>
                     <input type="password" name="rpass" id="rpass" required>
                 </div>
+
+                <br>
                 <div>
                     <input type="checkbox" name="terms" id="terms">
-                    <label for="terms">Acepto terminos y condiciones</label>
+                    <label for="terms">Acepto términos y condiciones</label>
                 </div>
+
+                <br>
                 <div>
                     <button type="submit">Enviar</button>
-                </div>
-                <div>
-                    <button type="reset">Borrar Formulario</button>
                 </div>
             </form>
         </div>
